<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="31dp"
    android:gravity="center"
    android:background="@color/color_background"
    tools:context=".ui.LoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/entrance"
        android:textColor="@color/color_main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textSize="28sp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/email"
        android:textColor="@color/color_main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        android:paddingTop="31dp"
        android:paddingBottom="8dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        app:hintEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:boxCornerRadiusBottomEnd="@dimen/round_corners_et"
        app:boxCornerRadiusTopEnd="@dimen/round_corners_et"
        app:boxCornerRadiusBottomStart="@dimen/round_corners_et"
        app:boxCornerRadiusTopStart="@dimen/round_corners_et"
        app:boxStrokeWidth="0dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        app:cursorColor="@color/color_main_text"
        app:boxStrokeWidthFocused="0dp">
        <EditText
            android:padding="0dp"
            android:id="@+id/et_email"
            android:hint="@string/example_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/color_input"
            android:textColor="@color/color_main_text"
            android:textColorHint="@color/color_secondary_text"
            android:fontFamily="@font/roboto"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/password"
        android:textColor="@color/color_main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:boxCornerRadiusBottomEnd="@dimen/round_corners_et"
        app:boxCornerRadiusTopEnd="@dimen/round_corners_et"
        app:boxCornerRadiusBottomStart="@dimen/round_corners_et"
        app:boxCornerRadiusTopStart="@dimen/round_corners_et"
        app:boxStrokeWidth="0dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        app:hintEnabled="false"
        app:cursorColor="@color/color_main_text"
        app:boxStrokeWidthFocused="0dp">
        <com.google.android.material.textfield.TextInputEditText
            android:padding="0dp"
            android:id="@+id/et_password"
            android:hint="@string/enter_password"
            android:textColorHint="@color/color_secondary_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/color_main_text"
            android:inputType="textPassword"
            android:backgroundTint="@color/color_input"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cornerRadius="@dimen/round_corners_et"
        android:backgroundTint="@color/color_primary"
        android:textSize="12sp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/color_main_text"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="@string/entrance"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:gravity="center">
        <com.google.android.material.textview.MaterialTextView
            android:text="@string/no_acc"
            android:textColor="@color/color_main_text"
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:text="@string/registration"
            android:textColor="@color/color_primary"
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
    </TableRow>

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/forgot_password"
        android:textColor="@color/color_primary"
        android:fontFamily="@font/roboto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:paddingBottom="24dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#4D555E"
        android:layout_marginBottom="24dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:backgroundTint="#2683ED"
            app:cornerRadius="@dimen/round_corners_et"
            android:paddingEnd="16dp"
            app:icon="@drawable/vk_icon"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            android:layout_marginEnd="16dp"
            android:layout_height="50dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_width="0dp"
            android:paddingStart="16dp"
            app:icon="@drawable/odnocl_icon"
            app:cornerRadius="@dimen/round_corners_et"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            android:backgroundTint="#F95D00"
            android:layout_height="50dp"
            />
    </TableRow>

</LinearLayout>